--- a/LunchList/res/values/strings.xml
+++ b/LunchList/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="sit_down_label">Sit-Down</string>
     <string name="delivery_label">Delivery</string>
     <string name="notes_label">Notes:</string>
+    <string name="feed_label">Feed URL</string>
     <string name="save_button_text">Save</string>
     
     <!-- List Page -->
@@ -27,4 +28,5 @@
     <!-- Menu -->
     <string name="add_restaurant">Add</string>
     <string name="settings">Settings</string>
+    <string name="rss_feed">RSS Feed</string>
 </resources>
