--- a/LunchList/res/values/strings.xml
+++ b/LunchList/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="add_restaurant">Add</string>
     <string name="settings">Settings</string>
     <string name="rss_feed">RSS Feed</string>
+    <string name="save_location">Save Location</string>
 </resources>
