--- a/LunchList/res/values/strings.xml
+++ b/LunchList/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="empty">No restaurants!</string>
 
     <!-- Details Page -->
     <string name="name_label">Name:</string>
