--- a/LunchList/res/values/strings.xml
+++ b/LunchList/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="settings">Settings</string>
     <string name="rss_feed">RSS Feed</string>
     <string name="save_location">Save Location</string>
+    <string name="help">Help</string>
 </resources>
